--- a/.gitignore
+++ b/.gitignore
@@ -19,3 +19,10 @@ backend/yarn-error.log*
 # Optional global
 # -------------------
 .DS_Store
+.env.local
+.env.development.local
+.env.test.local
+.env.production.local
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
